# Stock-Trading-Agent-using-Reinforcement-Learning

./: .gitignore  README.md  RL Notebook.ipynb  RL.py  agent.py  charts.py  checkpoint.py  data_processing.py  data_wrangling.py  download_data.py  dqn.py  eval.py  eval_data.csv  evaluate.py  get_data.ipynb  job_script.sh  main.py  noise.py  noisylinear.py  other.ipynb  pyproject.toml  rdqn.py  reliance_data.csv  replaybuffer.py  requirements.txt  trading_env.py  train.py
HPC_Scripts/: RL.ipynb  RL.py  job_script.sh
data/: eval_data.csv  train_data.csv
