[project]
name = "reinforcement-learning-stock-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "torch>=2.7.1",
    "wandb>=0.20.1",
    "yfinance>=0.2.63",
]
